# esp32_iot_core

./: .gitignore  CMakeLists.txt  Makefile  README 2.md  README.md  sdkconfig  sdkconfig.old
blueprints/: bme280.json
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/core/: core.cpp
main/core/include/core/: core.h
main/core/include/core/application/service/: service.h
main/core/include/core/sys/ble/: ble_manager.h
main/core/include/core/sys/log/: log.h
main/core/sys/log/: log.cpp
main/core/sys/utils/: utils.cpp
main/core/sys/wifi/: wifi_manager.cpp
main/libs/: ws2812.c  ws2812.h
s2/: partitions.csv  sdkconfig.defaults
s2/docs/: conf.py  index.rst
s2/main/: CMakeLists.txt
s2/main/core/: core.cpp
s2/main/core/application/service/: service.cpp
s2/main/core/include/core/: constants.h
s2/main/core/include/core/sys/log/: log.h
s2/main/core/include/core/sys/utils/: utils.h
s2/main/core/include/core/sys/wifi/: wifi_manager.h
s2/main/core/sys/ble/: ble_manager.cpp
s3/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
s3/main/: CMakeLists.txt  app_main.c  bt_manager.c  bt_manager.h  constants.h  iridium.h  utils.c  utils.h  wifi_manager.c  wifi_manager.h
